--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "astro": "^3.0.8",
+    "astro-icon": "^0.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
