--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^6.0.0",
     "@astrojs/react": "^3.0.1",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "astro": "^3.0.8",
     "astro-icon": "^0.8.1",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.3.1",
+    "firebase-admin": "^11.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
