--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/googlemaps": "^3.43.3"
   }
 }
